[package]
name = "another-steam-totp"
description = "Implementation of Steam time-based one-time password."
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/juliarose/another-steam-totp"
repository = "https://github.com/juliarose/another-steam-totp"
license = "MIT"
keywords = ["steam", "totp"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
sha-1 = "0.10.0"
byteorder = "1"
hmac = "^0.12"
thiserror = "1.0"
reqwest = { version = "^0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
reqwest = ["dep:reqwest", "dep:serde"]

[[example]]
name = "get_steam_server_time_offset"
required-features = ["reqwest"]